dataset1235/2025-2/2318198438/users/1225947802/executions/2601575092_1467685783.log
== RUN (2025-08-13 22:20:11)
-- CODE: 
print(35*20)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 22:19:43)
-- CODE: 
print(35*)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print(35*)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print(35*)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 22:20:14)
-- CODE: 
print(35*20)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
